# timesheet-automation

./: .gitignore  LICENSE  README.md  excel_reader.py  main.py  pyproject.toml  web_automator.py
