[project]
name = "timesheet-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "typer>=0.21.1",
]
